--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,19 +1,25 @@
-<%- include('partials/header') %>
-<main>
-  <h1 class="title">Edit Blog</h1>
-  <div class="form-container">
-    <form action="/edit/<%= blog.id %>" method="post" enctype="multipart/form-data">
-      <label for="bTitle">Blog Title</label>
-      <input type="text" id="bTitle" name="blogTitle" value="<%= blog.title %>" required />
-      <label for="bDes">Blog description</label>
-      <textarea id="bDes" name="blogDes" rows="6" required><%= blog.description %></textarea>
-      <label for="bImage">Blog Image</label>
-      <% if (blog.image) { %>
-        <img src="<%= blog.image %>" alt="Blog Image" style="max-width: 100%; height: auto;" />
-      <% } %>
-      <input type="file" id="bImage" name="blogImage" />
-      <input type="submit" value="UPDATE" />
-    </form>
-  </div>
-</main>
-<%- include('partials/footer') %>
+<!DOCTYPE html>
+<html lang="en">
+<%- include('partials/head.ejs') %>
+<body>
+    <%- include('partials/header.ejs') %>
+    <main>
+        <h1 class="title">Edit Blog</h1>
+        <div class="form-container">
+            <form action="/edit/<%= blog.id %>" method="post" enctype="multipart/form-data">
+                <label for="bTitle">Blog Title</label>
+                <input type="text" id="bTitle" name="blogTitle" value="<%= blog.title %>" required />
+                <label for="bDes">Blog description</label>
+                <textarea id="bDes" name="blogDes" rows="6" required><%= blog.description %></textarea>
+                <label for="bImage">Blog Image</label>
+                <% if (blog.image) { %>
+                    <img src="<%= blog.image %>" alt="Blog Image" style="max-width: 100%; height: auto;" />
+                <% } %>
+                <input type="file" id="bImage" name="blogImage" />
+                <input type="submit" value="UPDATE" />
+            </form>
+        </div>
+    </main>
+    <%- include('partials/footer.ejs') %>
+</body>
+</html>
