--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,24 @@
-<%- include('partials/header') %>
-<main>
-  <h1 class="title">Welcome to Blog app</h1>
-  <div class="form-container">
-    <p class="form-text">Edit your Blog</p>
-    <p class="form-text">Fill the form for creating your blog</p>
-    <form action="/home" method="post" enctype="multipart/form-data">
-      <label for="bTitle">Blog Title</label>
-      <input type="text" id="bTitle" name="blogTitle" placeholder="Your Title Here..." required />
-      <label for="bDes">Blog description</label>
-      <textarea id="bDes" name="blogDes" placeholder="Your Blog here..." rows="6" required></textarea>
-      <label for="bImage">Blog Image</label>
-      <input type="file" id="bImage" name="blogImage" />
-      <input type="submit" value="PUBLISH" />
-    </form>
-  </div>
-</main>
-<%- include('partials/footer') %>
+<!DOCTYPE html>
+<html lang="en">
+<%- include('partials/head.ejs') %>
+<body>
+    <%- include('partials/header.ejs') %>
+    <main>
+        <h1 class="title">Welcome to Blog app</h1>
+        <div class="form-container">
+            <p class="form-text">Edit your Blog</p>
+            <p class="form-text">Fill the form for creating your blog</p>
+            <form action="/home" method="post" enctype="multipart/form-data">
+                <label for="bTitle">Blog Title</label>
+                <input type="text" id="bTitle" name="blogTitle" placeholder="Your Title Here..." required />
+                <label for="bDes">Blog description</label>
+                <textarea id="bDes" name="blogDes" placeholder="Your Blog here..." rows="6" required></textarea>
+                <label for="bImage">Blog Image</label>
+                <input type="file" id="bImage" name="blogImage" />
+                <input type="submit" value="PUBLISH" />
+            </form>
+        </div>
+    </main>
+    <%- include('partials/footer.ejs') %>
+</body>
+</html>
