steps text added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <main>
         <h1 class="title">Welcome to Blog app</h1>
         <div class="form-container">
-            <p class="form-text">Edit your Blog</p>
-            <p class="form-text">Fill the form for creating your blog</p>
+            <p class="form-text">Step 1: Edit your Blog</p>
+            <p class="form-text">Step 2: Fill the form for creating your blog</p>
             <form action="/home" method="post" enctype="multipart/form-data">
                 <label for="bTitle">Blog Title</label>
                 <input type="text" id="bTitle" name="blogTitle" placeholder="Your Title Here..." required />
