--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="viewBlog-header">
                 <h1 class="title text-left"><%= blogDetails.title %></h1>
-                <a href="/edit/<%= blogDetails.id %>" class="edit-btn">Edit</a>
+                <a href="/edit/<%= blogDetails.id %>" class="edit-btn">Bewerk</a>
             </div>
             <div class="overflow-div">
                 <% if (blogDetails.image) { %>
