--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
   </div>
   <nav class="site-navigation">
     <ul class="nav">
-      <li><a href="/">Create Blog</a></li>
-      <li><a href="/bloglist">View All Blogs</a></li>
+      <li><a href="/">Maak Blog</a></li>
+      <li><a href="/bloglist">Bekijk alle blogs</a></li>
     </ul>
   </nav>
 </header>
