--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%= metaDescription || 'A simple blog built with Node.js and Express' %>">
     <meta name="keywords" content="blog, Node.js, Express, JavaScript, EJS">
     <meta name="author" content="Ilona van Oosbree">
-    <title><%= pageTitle || 'My Blog' %></title>
+    <title><%= pageTitle || 'Mijn blog' %></title>
     <link rel="stylesheet" href="/styles.css">
     <script src="scripts.js"></script>
 </head>
