--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title><%= pageTitle %></title>
-</head>
-<body>
-  <h1>Login</h1>
-  <form action="/login" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <button type="submit">Login</button>
-  </form>
-</body>
-</html>
+<%- include('partials/head.ejs') %>
+
+    <body>
+        <main>
+            <div class="login-container">
+                <h1>Login</h1>
+                <form action="/login" method="post">
+                    <fieldset>
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username" required>
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" required>
+                        <button type="submit">Login</button>
+                    </fieldset>
+                </form>
+                <p class="form-text"> No account yet? <a href="/register">Register here</a></p>
+            </div>
+        </main>
+        <%- include('partials/footer.ejs') %>
+    </body>
+
+    </html>
